--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "better-auth": "^1.4.10",
     "next": "16.1.1",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
